--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -5,8 +5,36 @@
 <div class="card">
     <section class="avatar" style="background: url(https://source.unsplash.com/collection/10552289/500x500) no-repeat center center / cover"></section>
     <section class="details">
-        
+        <h3>Detalhes</h3>
+
+        <div class="item">
+            <div>Nome</div>
+            <div>Leonardo Campello</div>
+        </div>
+
+        <div class="item">
+            <div>Idade</div>
+            <div>19</div>
+        </div>
+
+        <div class="item">
+            <div>Sexo</div>
+            <div>Masculino</div>
+        </div>
+
+        <div class="item">
+            <div>Acompanhamento</div>
+            <div>
+                <span>Musculação</span>
+                <span>Natação</span>
+            </div>
+        </div>
+
+        <div class="item">
+            <div>Desde</div>
+            <div>18/03/2018</div>
+        </div>
     </section>
 </div>
 
-{% endblock content %} 
+{% endblock content %}
