--- a/views/layout.njk
+++ b/views/layout.njk
@@ -6,7 +6,7 @@
             <title>Gym Manager</title>
         {% endblock %}
         
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
 
     <body>
