--- a/public/style.css
+++ b/public/style.css
@@ -156,7 +156,8 @@ input::placeholder {
     font-weight: normal;
 }
 
-button[type="submit"] {
+button[type="submit"],
+a.button {
     width: 100%;
     padding: 8px 32px;
     background-color: var(--primary-color);
@@ -164,4 +165,11 @@ button[type="submit"] {
     border-radius: 4px;
     font-size: 16px;
     margin-top: 32px;
+}
+
+a.button {
+    display: block;
+    box-sizing: border-box; 
+    text-align: center;
+    text-decoration: none;
 }
