--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -2,11 +2,25 @@
 
 {% block content %}
 
-        <form class="card" method="POST" action="/instructors">
-            <section class="avatar" style="background: url(https://source.unsplash.com/collection/10552289/500x500) no-repeat center center / cover"></section>
-            <section class="details">
-                <h3>Editar instrutor</h3>
+<div class="card">
+    <section class="avatar" style="background: url({{ instructor.avatar_url }}) no-repeat center center / cover"></section>
 
-                {% include "instructors/fields.njk" %}
+    <section class="details">
+
+        <form method="POST" action="/instructors?_method=PUT">
+            <h3>Editar instrutor</h3>
+
+            {% include "instructors/fields.njk" %}
+
+            <input type="hidden" name="id" value="{{ instructor.id }}">
+        </form>
+
+        <form id="form-delete" method="POST" action="/instructors?_method=DELETE">
+            <input type="hidden" name="id" value="{{ instructor.id }}">
+            <button type="submit">Deletar</button>
+        </form>
+
+    </section>
+</div>
 
 {% endblock content %}
