--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -4,17 +4,18 @@
 
 <div class="card">
     <section class="avatar" style="background: url(https://source.unsplash.com/collection/10552289/500x500) no-repeat center center / cover"></section>
+
     <section class="details">
         <h3>Detalhes</h3>
 
         <div class="item">
             <div>Nome</div>
-            <div>Leonardo Campello</div>
+            <div>Example Example Example</div>
         </div>
 
         <div class="item">
             <div>Idade</div>
-            <div>19</div>
+            <div>0101</div>
         </div>
 
         <div class="item">
