--- a/views/instructors/show.njk
+++ b/views/instructors/show.njk
@@ -4,6 +4,7 @@
 
 <div class="card">
     <section class="avatar" style="background: url({{ instructor.avatar_url }}) no-repeat center center / cover"></section>
+    
     <section class="details">
         <h3>Detalhes</h3>
 
@@ -36,9 +37,9 @@
             <div>{{ instructor.created_at }}</div>
         </div>
 
-        <a href="#" class="button">Editar</a>
+        <a href="/instructors/{{ instructor.id }}/edit" class="button">Editar</a>
+        
     </section>
-
 </div>
 
 {% endblock content %}
