--- a/public/style.css
+++ b/public/style.css
@@ -125,7 +125,8 @@ header {
     color: var(--primary-color);
 }
 
-.details .item span {
+.details .item span,
+tbody tr td:nth-child(2) span {
     font-size: 12px;
     text-transform: uppercase;
     font-weight: bold;
@@ -140,7 +141,8 @@ header {
 
 /* ================ form ================ */
 
-input {
+input,
+select {
     width: 100%;
     outline: none;
     font-size: 18px;
@@ -218,10 +220,6 @@ th, td {
     border-bottom: 1px solid #d9d9d9;
 }
 
-tbody tr:last-child td {
-    border-bottom: none;
-}
-
 tbody tr td:first-child {
     display: grid;
     grid-template-columns: 64px 1fr;
@@ -243,6 +241,11 @@ tbody tr td:nth-child(1) {
     font-weight: bold;
 }
 
+
+tbody tr:last-child td {
+    border-bottom: none;
+}
+
 tbody tr td:last-child a,
 .table-container > a {
     color: #fff;
@@ -254,7 +257,19 @@ tbody tr td:last-child a,
     font-size: 12px;
 }
 
+tbody tr td:last-child a:hover {
+    color: #555;
+    background-color: var(--secondary-color);
+    transition: 300ms ease-in-out;  
+}
+
 .table-container > a {
     margin-bottom: 16px;
     display: inline-block;
+}
+
+.table-container > a:hover {
+    color: #555;
+    background-color: var(--secondary-color);
+    transition: 300ms ease-in-out;
 }
