--- a/views/members/fields.njk
+++ b/views/members/fields.njk
@@ -15,7 +15,7 @@
 <div class="item">
     <div>Email</div>
     <div>
-        <input type="email" name="name" value="{{ member.name }}">
+        <input type="email" name="email" value="{{ member.email }}">
     </div>
 </div>
 
@@ -42,25 +42,25 @@
 </div>
 
 <div class="item">
-    <div>Tipo Sanguíneo</div>
+    <div>Tipo sanguíneo</div>
     <div>
         <select name="blood">
-            <option value="A1" 
-                {% if member.blood == "A1" %} selected {% endif %}> A+</option>
-            <option value="A0" 
-                {% if member.blood == "A1" %} selected {% endif %}> A-</option>
-            <option value="B1"
-                {% if member.blood == "A1" %} selected {% endif %}> B+</option>
-            <option value="B0"
-                {% if member.blood == "A1" %} selected {% endif %}> B-</option>
-            <option value="AB1"
-                {% if member.blood == "A1" %} selected {% endif %}> AB+</option>
-            <option value="AB0" 
-                {% if member.blood == "A1" %} selected {% endif %}> AB-</option>            
-            <option value="O1" 
-                {% if member.blood == "A1" %} selected {% endif %}> O+</option>
-            <option value="O0" 
-                {% if member.blood == "A1" %} selected {% endif %}> O-</option>                        
+            <option value="A+" 
+                {% if member.blood == "A+" %} selected {% endif %}> A+</option>
+            <option value="A-" 
+                {% if member.blood == "A-" %} selected {% endif %}> A-</option>
+            <option value="B+"
+                {% if member.blood == "B+" %} selected {% endif %}> B+</option>
+            <option value="B-"
+                {% if member.blood == "B-" %} selected {% endif %}> B-</option>
+            <option value="AB+"
+                {% if member.blood == "AB+" %} selected {% endif %}> AB+</option>
+            <option value="AB-" 
+                {% if member.blood == "AB-" %} selected {% endif %}> AB-</option>            
+            <option value="O+" 
+                {% if member.blood == "O+" %} selected {% endif %}> O+</option>
+            <option value="O-" 
+                {% if member.blood == "O-" %} selected {% endif %}> O-</option>                        
         </select>
     </div>
 </div>
