--- a/views/members/index.njk
+++ b/views/members/index.njk
@@ -3,7 +3,6 @@
 {% block content %}
 
 <div class="card table-container">
-    <a href="/members/create">Novo membro</a>
     <table width="100%">
         <thead>
             <tr>
@@ -29,6 +28,7 @@
             {% endfor %}
         </tbody>
     </table>
+        <a href="/members/create"><span><img src="/assets/add.svg" alt="Add icon"></span>Novo membro</a>
 </div>
 
 {% endblock content %}
