--- a/views/instructors/create.njk
+++ b/views/instructors/create.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
         <form class="card" method="POST" action="/instructors">
-            <section class="avatar" style="background: url(https://source.unsplash.com/collection/10552289/500x500) no-repeat center center / cover"></section>
+            <section class="avatar" style="background: url(https://images.unsplash.com/photo-1584466977773-e625c37cdd50?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80) no-repeat center center / cover"></section>
 
             <section class="details">
 
