--- a/views/layout.njk
+++ b/views/layout.njk
@@ -6,11 +6,12 @@
             <title>Gym Manager</title>
         {% endblock %}
         
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
 
     <body>
         <header>
+            <img src="/assets/logo.svg" alt="Logo">
             <div class="links">
                 <a href="/instructors">Instructors</a>
                 <a href="/members">Members</a>
@@ -19,7 +20,7 @@
 
         {% block content %}{% endblock %}        
 
-    <script src="/scripts.js"></script>
+    <script src="/scripts/menu.js"></script>
     </body>
 
 </html>
