--- a/views/members/create.njk
+++ b/views/members/create.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
         <form class="card" method="POST" action="/members">
-            <section class="avatar" style="background: url(https://source.unsplash.com/collection/10552289/500x500) no-repeat center center / cover"></section>
+            <section class="avatar" style="background: url(https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80) no-repeat center center / cover"></section>
 
             <section class="details">
 
