--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <img src="/assets/logo.svg" alt="Logo">
+            <img src="/assets/logo.png" alt="Logo">
             <div class="links">
                 <a href="/instructors">Instructors</a>
                 <a href="/members">Members</a>
