Deleting bank data

--- a/src/app/views/confirm.njk
+++ b/src/app/views/confirm.njk
@@ -4,7 +4,7 @@
     const formDelete = document.querySelector("#form-delete")
 
     formDelete.addEventListener("submit", (event) => {
-        const confirmation = confirm("Você deseja realmente deletar este perfil? 😟")
+        const confirmation = confirm("Você deseja realmente deletar este perfil? 😱")
 
         if(!confirmation) {
             event.preventDefault()
