--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -5,7 +5,7 @@
         {% block head %}
             <title>Gym Manager</title>
         {% endblock %}
-        
+        <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="/styles/main.css">
     </head>
 
