--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -13,8 +13,8 @@
         <header>
             <img src="/assets/logo.png" alt="Logo">
             <div class="links">
-                <a href="/instructors">Instructors</a>
-                <a href="/members">Members</a>
+                <a href="/instructors">Instrutores</a>
+                <a href="/members">Membros</a>
             </div>
         </header>
 
