--- a/src/app/views/members/fields.njk
+++ b/src/app/views/members/fields.njk
@@ -79,4 +79,18 @@
     </div>
 </div>
 
+<div class="item">
+    <div>Instrutor</div>
+    <div>
+        <select name="instructor">
+            {% for instructor in instructorsSelectOptions %}
+            <option value="{{ instructor.id }}" 
+                {% if member.instructor_id == instructor.id %} selected {% endif %}> {{ instructor.name }}
+            </option>                        
+            {% endfor %}
+        </select>
+    </div>
+</div>
+
+
 <button type="submit">Salvar</button>
