--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -21,6 +21,7 @@
         {% block content %}{% endblock %}        
 
     <script src="/scripts/menu.js"></script>
+    <script src="/scripts/paginate.js"></script>
     </body>
 
 </html>
