Structuring data for pagination, total records with subqueries and using HTML dataset.

--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -40,6 +40,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        
+        <div class="pagination" data-page = 15 data-total = 20></div>
+        
         <a href="/instructors/create">
             <span><img src="/assets/add.svg" alt="Add icon"></span>Novo instrutor</a>
     </div>
