--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -20,8 +20,7 @@
 
         {% block content %}{% endblock %}        
 
-    <script src="/scripts/menu.js"></script>
-    <script src="/scripts/paginate.js"></script>
+    <script src="/scripts/scripts.js"></script>
     </body>
 
 </html>
