--- a/src/app/views/members/index.njk
+++ b/src/app/views/members/index.njk
@@ -2,33 +2,53 @@
 
 {% block content %}
 
-<div class="card table-container">
-    <table width="100%">
-        <thead>
-            <tr>
-                <th>Membro</th>
-                <th>Email</th>
-                <th>Peso</th>
-                <th>Altura</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for member in members %}
-            <tr>
-                <td>
-                    <span style="background-image: url({{ member.avatar_url }})"></span>
-                    {{ member.name }}
-                </td>
-                <td>{{ member.email }}</td>
-                <td>{{ member.weight }}kg</td>
-                <td>{{ member.height }}cm</td>
-                <td><a href="/members/{{ member.id }}">Ver</a></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-        <a href="/members/create"><span><img src="/assets/add.svg" alt="Add icon"></span>Novo membro</a>
-</div>
+    <div class="card table-container">
+        <table width="100%">
+
+            <form action="/instructors">
+                <div class="header">
+                    <a href="/instructors/create">
+                        <span><img src="/assets/add.svg" alt="Add icon"></span>
+                        Novo instrutor
+                    </a>
+                    <div>
+                        <input type="text" name="filter" placeholder="Nome ou Email" value="{{ filter }}">
+                        <button type="submit">Filtrar</button>
+                    </div>
+                </div>
+            </form>
+
+            <thead>
+                <tr>
+                    <th>Membro</th>
+                    <th>Email</th>
+                    <th>Peso</th>
+                    <th>Altura</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for member in members %}
+                    <tr>
+                        <td>
+                            <span style="background-image: url({{ member.avatar_url }})"></span>
+                            {{ member.name }}
+                        </td>
+                        <td>{{ member.email }}</td>
+                        <td>{{ member.weight }}kg</td>
+                        <td>{{ member.height }}cm</td>
+                        <td>
+                            <a href="/members/{{ member.id }}">Ver</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+
+        </table>
+
+        <div class="pagination" data-page="15" data-total="20"></div>
+
+    </div>
 
 {% endblock content %}
