--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -8,7 +8,7 @@
             <form action="/instructors">
                 <div class="header">
                     <a href="/instructors/create">
-                        <span><img src="/assets/add.svg" alt="Add icon"></span>
+                        <span style="background-image: url(/assets/add.svg)"></span>
                         Novo instrutor
                     </a>
                     <div>
@@ -46,7 +46,7 @@
                     </tr>
                 {% endfor %}
             </tbody>
-            
+
         </table>
 
         <div class="pagination" data-page="15" data-total="20"></div>
