--- a/src/app/views/members/index.njk
+++ b/src/app/views/members/index.njk
@@ -8,8 +8,8 @@
             <form action="/instructors">
                 <div class="header">
                     <a href="/instructors/create">
-                        <span><img src="/assets/add.svg" alt="Add icon"></span>
-                        Novo instrutor
+                        <span style="background-image: url(/assets/add.svg)"></span>
+                        Novo membro
                     </a>
                     <div>
                         <input type="text" name="filter" placeholder="Nome ou Email" value="{{ filter }}">
