Applying member paging

--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -48,9 +48,10 @@
             </tbody>
 
         </table>
-
-        <div class="pagination" data-page="15" data-total="20"></div>
-
+        
+    <div class="pagination" data-page="{{ pagination.page}}" data-total="{{ pagination.total }}" data-filter="{{ filter }}"></div>
+        
     </div>
+
 
 {% endblock content %}
