Refactoring in code using async / await and minor changes in styles

--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -9,7 +9,7 @@
                 <div class="header">
                     <a href="/instructors/create">
                         <span style="background-image: url(/assets/add.svg)"></span>
-                        Novo instrutor
+                        Novo
                     </a>
                     <div>
                         <input type="text" name="filter" placeholder="Nome ou Atendimento" value="{{ filter }}">
