--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,300;1,600&display=swap');
 
 :root {
     --primary-color: #FF3D4C;
-    --secondary-color: #85E2BF;
+    --secondary-color: #04D361;
     --action: #610a00;
     --gray: #777777
 }
@@ -10,12 +10,18 @@
 * {
     margin: 0;
     padding: 0;
+
     border: none;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
     background-color: #FF3D4C;
+}
+
+body,
+input,
+select {
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
@@ -30,8 +36,8 @@ header {
 }
 
 header img {
-    width: 80px;
-    height: 80px;
+    width: 72px;
+    height: 72px;
     left: 5%;
     position: absolute;
 }
@@ -87,7 +93,9 @@ header img {
     display: grid;
     grid-template-columns: 1fr 1fr;
     
-    box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.6);
+
+    border-radius: 4px;
 
     animation: up 200ms ease-out;
 }
@@ -232,18 +240,12 @@ a.button {
 }
 
 .header a {
-    width: 160px;
+    width: 96px;
     display: grid;
     grid-template-columns: 16px 1fr;
     align-items: center;
     gap: 8px;
     box-sizing: border-box;
-}
-
-.header a:hover {
-    color: #555;
-    background-color: var(--secondary-color);
-    transition: 200ms ease-in-out;
 }
 
 .header div {
@@ -320,12 +322,6 @@ tbody tr td:last-child a,
     text-transform: uppercase;
     text-decoration: none;
     font-size: 12px;
-}
-
-tbody tr td:last-child a:hover {
-    color: #555;
-    background-color: var(--secondary-color);
-    transition: 300ms ease-in-out;  
 }
 
 .pagination {
