--- a/src/app/views/members/index.njk
+++ b/src/app/views/members/index.njk
@@ -9,7 +9,7 @@
                 <div class="header">
                     <a href="/members/create">
                         <span style="background-image: url(/assets/add.svg)"></span>
-                        Novo membro
+                        Novo 
                     </a>
                     <div>
                         <input type="text" name="filter" placeholder="Nome ou Email" value="{{ filter }}">
