--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,300;1,600&display=swap');
 
 :root {
-    --primary-color: #FF3D4C;
+    --primary-color: #4169E1;
     --secondary-color: #04D361;
-    --action: #610a00;
+    --action: #142061;
     --gray: #777777
 }
 
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: #FF3D4C;
+    background-color: #1E90FF;
 }
 
 body,
@@ -36,14 +36,15 @@ header {
 }
 
 header img {
-    width: 72px;
-    height: 72px;
+    width: 112px;
+    height: 112px;
     left: 5%;
     position: absolute;
 }
 
 .links {
     font-size: 22px;
+    line-height: 32px;
 }
 
 .links a + a {
@@ -83,9 +84,10 @@ header img {
 /* ================ card ================ */
 
 .card {
-    background-color: white;
-    width: 800px;
+    background-color: #fff;
+    width: 850px;
     min-height: 400px;
+
     position: relative;
 
     margin: 45px auto;
