--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,43 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,300;1,600&display=swap');
-
-:root {
-    --primary-color: #4169E1;
-    --secondary-color: #04D361;
-    --action: #142061;
-    --gray: #777777
-}
-
-* {
-    margin: 0;
-    padding: 0;
-
-    border: none;
-}
-
-body {
-    background-color: #1E90FF;
-}
-
-body,
-input,
-select {
-    font-family: 'Montserrat', sans-serif;
-}
-
 header {
-    width: 100%;
     background-color: #fff;
+
+    width: 100%;
     padding: 32px;
-    box-sizing: border-box;
+    
     display: flex;
     align-items: center;
     justify-content: center;
+    
     position: relative;
 }
 
 header img {
-    width: 112px;
-    height: 112px;
+    width: 88px;
+    height: 88px;
+
     left: 5%;
     position: absolute;
 }
@@ -52,8 +29,9 @@ header img {
 }
 
 .links a {
-    text-decoration: none;
     color: var(--gray);
+
+    text-decoration: none;
     position: relative;
 }
 
@@ -81,94 +59,15 @@ header img {
     transition: width 200ms ease-in-out;
 }
 
-/* ================ card ================ */
-
-.card {
-    background-color: #fff;
-    width: 850px;
-    min-height: 400px;
-
-    position: relative;
-
-    margin: 45px auto;
-    
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    
-    box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.6);
-
-    border-radius: 4px;
-
-    animation: up 200ms ease-out;
-}
-
-@keyframes up {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-.details {
-    padding: 32px;
-}
-
-.details .item {
-    padding: 16px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.details .item:last-child {
-    border: none;
-}
-
-.details h3,
-.details .item div:nth-child(1) {
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.7px;
-    font-weight: bold;
-    color: var(--gray);
-}
-
-.details .item div:nth-child(2) {
-    font-size: 18px;
-    font-weight: bold;
-    color: #555;
-}
-
-.details h3 {
-    text-transform: uppercase;
-    font-weight: bold;
-    color: var(--primary-color);
-}
-
-.details .item span,
-tbody tr td:nth-child(2) span {
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: var(--gray);
-    background-color: var(--secondary-color);
-    padding: 8px 16px;
-    border-radius: 16px;
-    margin-left: 4px;
-    margin-top: 8px;
-    display: inline-block;
-}
-
-/* ================ form ================ */
+/* ================ FORM ================ */
 
 input,
 select {
+    color: #555;
     width: 100%;
-    outline: none;
+
     font-size: 18px;
     font-weight: bold;
-    color: #555;
 }
 
 input[type="radio"] {
@@ -183,22 +82,26 @@ input::placeholder {
 
 button[type="submit"],
 a.button {
+    color: #fff;
+    background-color: var(--primary-color);
+    
     width: 100%;
     padding: 8px 32px;
-    background-color: var(--primary-color);
-    color: #fff;
-    text-transform: uppercase;
     border-radius: 4px;
+    
     font-size: 14px;
-    letter-spacing: 1px;
     font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    
     cursor: pointer;
+    
     margin-top: 32px;
 }
 
 a.button {
     display: block;
-    box-sizing: border-box; 
+    
     text-align: center;
     text-decoration: none;
 }
@@ -206,140 +109,6 @@ a.button {
 #form-delete button[type="submit"] {
     background-color: var(--gray);
     text-transform: uppercase;
+
     margin-top: 8px;
-}
-
-/* ================ INDEX ================ */
-
-.table-container {
-    display: grid;
-    grid-template: 64px 1fr 16px / 1fr;
-    padding: 40px;
-    box-sizing: border-box;
-}
-
-.table-container table {
-    border-spacing: 0;
-    margin-bottom: 24px;
-}
-
-.table-container thead tr th:last-child {
-    color: var(--action);
-}
-
-.header {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-self: start;
-}
-
-.header a span {
-    width: 14px;
-    height: 14px;
-    background-position: center;
-    background-size: cover;
-    margin-right: 8px;
-}
-
-.header a {
-    width: 96px;
-    display: grid;
-    grid-template-columns: 16px 1fr;
-    align-items: center;
-    gap: 8px;
-    box-sizing: border-box;
-}
-
-.header div {
-    display: grid;
-    grid-template-columns: 1fr 128px;
-    gap: 8px;
-}
-
-.header div input {
-    padding: 4px 8px;
-    border: 1px solid var(--action);
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-.header div button {
-    width: 128px;
-    margin: 0;
-}
-
-thead th {
-    color: var(--gray);
-    text-transform: uppercase;
-    font-size: 14px;
-    text-align: center;
-}
-
-th, td {
-    padding: 16px;
-    border-bottom: 1px solid #d9d9d9;
-}
-
-tbody tr td:first-child {
-    display: grid;
-    grid-template-columns: 64px 1fr;
-    align-items: center;
-}
-
-tbody tr td:first-child span {
-    width: 48px;
-    height: 48px;
-    background-position: center;
-    background-size: cover;
-    border-radius: 40%;
-    border: 1px solid var(--secondary-color);
-    box-shadow: 3px 1px 6px -4px #000;
-} 
-
-tbody tr td:nth-child(1) {
-    color: var(--primary-color);
-    font-weight: bold;
-}
-
-tbody tr td:nth-child(2),
-tbody tr td:nth-child(3),
-tbody tr td:last-child {
-    text-align: center;
-}
-
-tbody tr td:nth-child(3) {
-    font-weight: bold;
-}
-
-tbody tr:last-child td {
-    border-bottom: none;
-}
-
-tbody tr td:last-child a,
-.header a {
-    color: #fff;
-    background-color: var(--primary-color);
-    border-radius: 4px;
-    padding: 8px 16px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 12px;
-}
-
-.pagination {
-    margin: 0;
-    align-self: end;
-    justify-self: center;
-}
-
-.pagination a,
-.pagination span {
-    color: var(--primary-color);
-    text-decoration: none;
-    margin-right: 16px;
-}
-
-.pagination a:hover {
-    filter: brightness(0.3);
-    border-bottom: 1px solid var(--action);
 }
