--- a/src/app/views/instructors/fields.njk
+++ b/src/app/views/instructors/fields.njk
@@ -1,21 +1,35 @@
 <div class="item">
     <div>Avatar URL</div>
     <div>
-        <input type="url" name="avatar_url" placeholder="http://" value="{{ instructor.avatar_url }}">
+        <input 
+            type="url" 
+            name="avatar_url" 
+            placeholder="http://" 
+            value="{{ instructor.avatar_url }}"
+        >
     </div>
 </div>
 
 <div class="item">
     <div>Nome</div>
     <div>
-        <input type="text" name="name" placeholder="Nome do instrutor" value="{{ instructor.name }}">
+        <input 
+            type="text" 
+            name="name"
+            placeholder="Nome do instrutor" 
+            value="{{ instructor.name }}"
+        >
     </div>
 </div>
 
 <div class="item">
     <div>Data de nascimento</div>
     <div>
-        <input type="date" name="birth" value="{{ instructor.birth }}">
+        <input 
+            type="date" 
+            name="birth" 
+            value="{{ instructor.birth }}"
+        >
     </div>
 </div>
 
@@ -23,12 +37,24 @@
     <div>Sexo</div>
     <div>
         <span>
-            <input type="radio" name="gender" value="M" {% if instructor.gender == "M" %} checked="checked" {% endif %}>
-            Masculino
+            <input 
+                type="radio" 
+                name="gender" 
+                value="M" 
+                {% if instructor.gender == "M" %} 
+                    checked="checked" 
+                {% endif %}
+            > Masculino
         </span>
         <span>
-            <input type="radio" name="gender" value="F" {% if instructor.gender == "F" %} checked="checked" {% endif %}>
-            Feminino
+            <input 
+                type="radio" 
+                name="gender" 
+                value="F" 
+                {% if instructor.gender == "F" %} 
+                    checked="checked" 
+                {% endif %}
+            > Feminino
         </span>
     </div>
 </div>
@@ -36,7 +62,12 @@
 <div class="item">
     <div>Área de atuação</div>
     <div>
-        <input type="text" name="services" placeholder="Separe os serviços prestados por vírgula" value="{{ instructor.services }}">
+        <input 
+            type="text" 
+            name="services" 
+            placeholder="Separe os serviços prestados por vírgula" 
+            value="{{ instructor.services }}"
+        >
     </div>
 </div>
 
