--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -2,56 +2,70 @@
 
 {% block content %}
 
-    <div class="card table-container">
-        <table width="100%">
+<div class="card table-container">
+    
+    <table width="100%">
 
-            <form action="/instructors">
-                <div class="header">
-                    <a href="/instructors/create">
-                        <span style="background-image: url(/assets/add.svg)"></span>
-                        Novo
-                    </a>
-                    <div>
-                        <input type="text" name="filter" placeholder="Nome ou Atendimento" value="{{ filter }}">
-                        <button type="submit">Filtrar</button>
-                    </div>
+        <form action="/instructors">
+        
+            <div class="header">
+
+                <a href="/instructors/create">
+                    <span style="background-image: url(/assets/add.svg)"></span>
+                    Novo
+                </a>
+                
+                <div>
+                    <input 
+                        type="text" 
+                        name="filter" 
+                        placeholder="Nome ou Atendimento" 
+                        value="{{ filter }}"
+                    >
+                    <button type="submit">Filtrar</button>
                 </div>
-            </form>
+                
+            </div>
+        </form>
+        
 
-            <thead>
+        <thead>
+            <tr>
+                <th>Instrutor</th>
+                <th>Atendimento</th>
+                <th>Alunos</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            {% for instructor in instructors %}
                 <tr>
-                    <th>Instrutor</th>
-                    <th>Atendimento</th>
-                    <th>Alunos</th>
-                    <th>Ações</th>
+                    <td>
+                        <span style="background-image: url({{ instructor.avatar_url }})"></span>
+                        {{ instructor.name }}
+                    </td>
+                    
+                    <td>
+                        {% for service in instructor.services %}
+                            <span>{{ service }}</span>
+                        {% endfor %}
+                    </td>
+                    
+                    <td>{{ instructor.total_members }}</td>
+                    
+                    <td>
+                        <a href="/instructors/{{ instructor.id }}">Ver</a>
+                    </td>
                 </tr>
-            </thead>
+            {% endfor %}
+        </tbody>
 
-            <tbody>
-                {% for instructor in instructors %}
-                    <tr>
-                        <td>
-                            <span style="background-image: url({{ instructor.avatar_url }})"></span>
-                            {{ instructor.name }}
-                        </td>
-                        <td>
-                            {% for service in instructor.services %}
-                                <span>{{ service }}</span>
-                            {% endfor %}
-                        </td>
-                        <td>{{ instructor.total_members }}</td>
-                        <td>
-                            <a href="/instructors/{{ instructor.id }}">Ver</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
+    </table>
+            
+    {% include "parts/pagination.njk" %}
 
-        </table>
-        
-    <div class="pagination" data-page="{{ pagination.page}}" data-total="{{ pagination.total }}" data-filter="{{ filter }}"></div>
-        
-    </div>
+</div>
 
 
 {% endblock content %}
