--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -2,12 +2,11 @@
 <html>
 
     <head>
-        {% block head %}
-            <title>Gym Manager</title>
-        {% endblock %}
         
-        <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="/styles/styles.css">
+        <title>Gym Manager</title>
+        
+        {% include 'parts/styles.njk' %}
+
     </head>
 
     <body>
@@ -16,7 +15,8 @@
 
         {% block content %}{% endblock %}        
 
-    <script src="/scripts/scripts.js"></script>
+        <script src="/scripts/scripts.js"></script>
+        
     </body>
 
 </html>
