--- a/src/app/views/members/create.njk
+++ b/src/app/views/members/create.njk
@@ -2,14 +2,21 @@
 
 {% block content %}
 
-        <form class="card" method="POST" action="/members">
-            <section class="avatar" style="background: url(https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80) no-repeat center center / cover"></section>
+<form class="card" method="POST" action="/members">
 
-            <section class="details">
+    <section 
+        class="avatar" 
+        style="background: url(https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80) no-repeat center center / cover"
+    ></section>
 
-            <h3>Novo Membro</h3>
-            
-            {% include "members/fields.njk" %}
-        </form>
+    <section class="details">
+
+        <h3>Novo Membro</h3>
+        
+        {% include "members/fields.njk" %}
+
+    </section>
+    
+</form>
 
 {% endblock content %}
