--- a/src/app/views/members/edit.njk
+++ b/src/app/views/members/edit.njk
@@ -3,24 +3,42 @@
 {% block content %}
 
 <div class="card">
-    <section class="avatar" style="background: url({{ member.avatar_url }}) no-repeat center center / cover"></section>
+    
+    <section 
+        class="avatar" 
+        style="background: url({{ member.avatar_url }}) no-repeat center center / cover"
+    ></section>
 
     <section class="details">
 
         <form method="POST" action="/members?_method=PUT">
+        
             <h3>Editar Membro</h3>
 
             {% include "members/fields.njk" %}
 
-            <input type="hidden" name="id" value="{{ member.id }}">
+            <input 
+                type="hidden" 
+                name="id" 
+                value="{{ member.id }}"
+            >
+
         </form>
 
         <form id="form-delete" method="POST" action="/members?_method=DELETE">
-            <input type="hidden" name="id" value="{{ member.id }}">
+        
+            <input 
+                type="hidden" 
+                name="id" 
+                value="{{ member.id }}"
+            >
+            
             <button type="submit">Deletar</button>
+
         </form>
 
     </section>
+    
 </div>
 
 {% include "../confirm.njk" %}
