--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -1,5 +1,5 @@
 <header>
-    <img src="/assets/logo.png" alt="Logo">
+    <img src="/assets/logo.svg" alt="Logo">
     <div class="links">
         <a href="/instructors">Instrutores</a>
         <a href="/members">Membros</a>
