--- a/public/styles/card.css
+++ b/public/styles/card.css
@@ -1,87 +1,87 @@
 .card {
-    background-color: #fff;
+  background-color: #fff;
 
-    width: 850px;
-    min-height: 400px;
+  width: 850px;
+  min-height: 400px;
 
-    position: relative;
+  position: relative;
 
-    margin: 45px auto;
-    
-    box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, .6);
+  margin: 45px auto;
 
-    border-radius: 4px;
+  box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.6);
 
-    animation: up 200ms ease-out;
+  border-radius: 4px;
 
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); 
+  animation: up 200ms ease-out;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 section.avatar {
-    border-radius: 4px 0 0 4px;
+  border-radius: 4px 0 0 4px;
 }
 
 @keyframes up {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .details {
-    padding: 32px;
+  padding: 32px;
 }
 
 .details .item {
-    padding: 16px 0;
-    
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
+  padding: 16px 0;
+
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .details .item:last-child {
-    border: none;
+  border: none;
 }
 
 .details h3,
 .details .item div:nth-child(1) {
-    font-size: 14px;
-    line-height: 24px;
-    
-    letter-spacing: .7px;
+  font-size: 14px;
+  line-height: 24px;
 
-    font-weight: bold;
-    color: var(--gray);
+  letter-spacing: 0.7px;
+
+  font-weight: bold;
+  color: var(--gray);
 }
 
 .details .item div:nth-child(2) {
-    font-size: 18px;
-    font-weight: bold;
-    color: #555;
+  font-size: 18px;
+  font-weight: bold;
+  color: #555;
 }
 
 .details h3 {
-    text-transform: uppercase;
-    font-weight: bold;
-    color: var(--primary-color);
+  text-transform: uppercase;
+  font-weight: bold;
+  color: var(--primary-color);
 }
 
 .details .item span,
 tbody tr td:nth-child(2) span {
-    color: var(--gray);
-    background-color: var(--secondary-color);
+  color: var(--gray);
+  background-color: var(--secondary-color);
 
-    padding: 8px 16px;
-    border-radius: 16px;
-    
-    font-size: 12px;
-    font-weight: bold;
-    text-transform: uppercase;
+  padding: 8px 16px;
+  border-radius: 16px;
 
-    margin: 8px 0 0 4px;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
 
-    display: inline-block;
+  margin: 8px 0 0 4px;
+
+  display: inline-block;
 }
